--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     </div>
                     <div class="video_details">
                         <div class="img_creator">
-                            <img src="images/profile-pic.png" alt="">
+                            <img src="profile-pic.png" alt="">
                         </div>
                         <div class="title">
                             <a href="" class="video_title">
